2013-01-14 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>
	* Added TFs for 7 TeV ttbar PowHeg+Pythia. !!! YOU MUST USE 8TeV parametrization and detector class (DetectorAtlas_8TeV.cxx)!!!

2013-01-14 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>
	* Added TFs for 8 TeV ttbar (LCJets, only for |eta|<2.5!)
	* New detector class for 8 TeV / MC12: DetectorAtlas_8TeV.cxx (MUST BE USED FOR NEW TFs!!!)
	* Updated ttbar l+jets example (mc11c TFs as default, full 105200 sample via AFS)
	* tag KLFitter-00-05-22

2012-12-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Modified normalization Minv LogLikelihoodDilepton term
	* Update TFs version, correct config.conf and set minimization method to SA as default in dilepton example
	* tag KLFitter-00-05-21

2012-12-12 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Added LikelihoodTopDilepton + InterfaceD3PD_dilepton + InterfaceOutput_dilepton  
	* Added dilepton example code in examples/top_dilepton
	* Added in extras/ a new code to read the config file of the example (readparameters)
	* Modified SelectionTool, Fitter, LikelihoodBase, Particles, PhysicsConstant, ResGauss_MET, ResolutionBase and Permutations
	  including new functions/variables needed in the dilepton likelihood
	* tag KLFitter-00-05-20

2012-10-30 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Rollback of a bug introduced in the SelectionTool in KLFitter-00-05-18
	* InterfaceD3PD_ljets.cxx: Now passing btag weight as well to allow for cuts via selection tool
	* tag KLFitter-00-05-19

2012-10-29 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>, Stefanie Adomeit <stefanie.adomeit@cern.ch>

	* Extended kVetoNoFit: 
		"kVetoNoFit" removes permutations with tagged jets on positions of light model particles
		"kVetoNoFitLight" removes permutations with untagged jets on positions of bjet model particles