@@ -283,26 +283,28 @@ int KLFitter::LikelihoodTopAllHadronic::RemoveForbiddenParticlePermutations()
   int err = 1; 
   
 
-  // only in b-tagging type kVetoNoFit
-  if (fBTagMethod != KLFitter::LikelihoodTopAllHadronic::kVetoNoFit)
+  // only in kVetoNoFitAndSoOn mode...
+  if (!((fBTagMethod == kVetoNoFit)||(fBTagMethod == kVetoNoFitLight)||(fBTagMethod == kVetoNoFitBoth)))
     return err;
 
-  // remove all permutations where a b-tagged jet is in the position of a model light quark
+
+  // remove all permutations where a b-tagged jet/non-tagged jet is on a wrong position
   KLFitter::Particles * particles = (*fPermutations)->Particles();
   int nPartons = particles->NPartons();
 
   KLFitter::Particles * particlesModel = fParticlesModel;
   int nPartonsModel = particlesModel->NPartons();
-
   for (int iParton(0); iParton < nPartons; ++iParton) {
     bool isBtagged = particles->IsBTagged(iParton);
-    if (!isBtagged)
-      continue;
 
-    
     for (int iPartonModel(0); iPartonModel < nPartonsModel; ++iPartonModel) {
+
       KLFitter::Particles::TrueFlavorType trueFlavor = particlesModel->TrueFlavor(iPartonModel);
-      if (trueFlavor != KLFitter::Particles::kLight)
+      if ((fBTagMethod == kVetoNoFit)&&((!isBtagged)||(trueFlavor != KLFitter::Particles::kLight)))
+        continue;
+      if ((fBTagMethod == kVetoNoFitLight)&&((isBtagged)||(trueFlavor != KLFitter::Particles::kB)))
+        continue;
+      if ((fBTagMethod == kVetoNoFitBoth)&&(((isBtagged)&&(trueFlavor != KLFitter::Particles::kLight))||((!isBtagged)&&(trueFlavor != KLFitter::Particles::kB))))
         continue;
 
       err *= (*fPermutations)->RemoveParticlePermutations(KLFitter::Particles::kParton, iParton, iPartonModel);
